--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -14,6 +14,7 @@ $bandsite-white: #FFFFFF;
 $bandsite-darkblack: #000000;
 $bandsite-mercury: #E1E1E1;
 $bandsite-alabaster: #FAFAFA;
+$bandsite-formerror: #D22D2D; 
 
 // column widths
 $mobile-margin: 1rem;       // 16px
